Fix: element border overlapping issue

--- a/assets-sources/scss/builder/_index.scss
+++ b/assets-sources/scss/builder/_index.scss
@@ -21,6 +21,7 @@
       height: calc(-204px + 100vh);
       // overflow: scroll;
       text-align: center;
+      overflow: hidden;
     }
   }
 
